force-app/main/default/objects/Window__c/Window__c.object-meta.xml
<CustomObject>
    <label>Window</label>
    <nameField>
        <label>Window Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Windows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>