force-app/main/default/objects/Window__c/fields/Calculated_SqFt__c.field-meta.xml
<CustomField>
    <fullName>Calculated_SqFt__c</fullName>
    <formula>(Width_In__c / 12) * ( Height_in__c / 12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated SqFt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>