force-app/main/default/objects/Window__c/fields/Height_in__c.field-meta.xml
<CustomField>
    <fullName>Height_in__c</fullName>
    <label>Height(in)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>