force-app/main/default/objects/Window__c/fields/Width_In__c.field-meta.xml
<CustomField>
    <fullName>Width_In__c</fullName>
    <label>Width(in)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>